--- a/DynamicBlogProject/Views/Blog/Index.cshtml
+++ b/DynamicBlogProject/Views/Blog/Index.cshtml
@@ -21,7 +21,7 @@
                             <ul class="blog-icons my-4">
                                 <li>
                                     <a href="#">
-                                        <i class="far fa-calendar-alt"></i> @item.CreationDate
+                                        <i class="far fa-calendar-alt"></i> @(((DateTime)item.CreationDate).ToString("dd/MMM/yyyy"))
                                     </a>
                                 </li>
                                 <li class="mx-2">
@@ -31,16 +31,16 @@
                                 </li>
                                 <li>
                                     <a href="#">
-                                        <i class="fas fa-eye"></i> @item.CategoryId
+                                        <i class="fas fa-eye"></i> @item.Category.Name
                                     </a>
                                 </li>
 
                             </ul>
                             <h5 class="card-title">
-                                <a href="single.html">@item.Title</a>
+                                <a href="/Blog/BlogReadAll/@item.Id">@item.Title</a>
                             </h5>
-                            <p class="card-text mb-3">Lorem ipsum dolor sit amet consectetur adipisicing elit sedc dnmo eiusmod tempor incididunt.. </p>
-                            <a href="single.html" class="btn btn-primary read-m">Read More</a>
+                            <p class="card-text mb-3">@item.Content.Substring(0, item.Content.Substring(0, 100).LastIndexOf(" "))..</p>
+                            <a href="/Blog/BlogReadAll/@item.Id" class="btn btn-primary read-m">Read More</a>
                         </div>
                     </div>
                     }
